--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     // compile 'org.apache.tika:tika-parsers:' + tikaversion
     compile 'com.itextpdf:itextpdf:5.5.13.1'
 
+    compile 'com.github.ben-manes.caffeine:caffeine:2.8.5'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
