--- a/wc/package.json
+++ b/wc/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-wc": "vue-cli-service build --target wc --inline-vue --name file-uploader 'src/components/Fileupload.vue'",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build-wc": "vue-cli-service build --target wc-async --inline-vue --name cg 'src/components/*.vue'",
+    "storybook": "start-storybook -p 6006"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -23,7 +24,10 @@
     "@storybook/vue": "^6.0.2",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
+    "@vue/cli-plugin-unit-jest": "^4.5.3",
     "@vue/cli-service": "^4.5.0",
+    "@vue/test-utils": "^1.0.3",
+    "axios-mock-adapter": "^1.18.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "compression-webpack-plugin": "^4.0.0",
@@ -45,7 +49,18 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {},
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
+    ]
   },
   "browserslist": [
     "> 1%",
