--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile "io.vertx:vertx-config:${vertxVersion}"
     compile "io.vertx:vertx-rx-java2:${vertxVersion}"
     compile "io.vertx:vertx-redis-client:${vertxVersion}"
+    compile "io.vertx:vertx-web-templ-handlebars:${vertxVersion}"
 
     compile 'net.sf.jmimemagic:jmimemagic:0.1.3'
     compile group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: imageioverson
