--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
     maven {
         url "https://oss.sonatype.org/content/repositories/iovertx-3868/"
     }
+    maven {
+        url "https://repository.aspose.com/list/repo"
+    }
 
 }
 
@@ -43,6 +46,11 @@ dependencies {
     compile 'com.itextpdf:itextpdf:5.5.13.1'
 
     compile 'com.github.ben-manes.caffeine:caffeine:2.8.5'
+
+    compile group: 'com.aspose', name: 'aspose-words', version: '20.8', 'classifier':'jdk17'
+    compile group: 'com.aspose', name: 'aspose-slides', version: '20.7', 'classifier':'jdk16'
+    compile group: 'com.aspose', name: 'aspose-cells', version: '20.8'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
