--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile("org.assertj:assertj-core:3.11.1")
+    testCompile('org.mockito:mockito-core:3.5.2')
 }
 
 mainClassName = 'net.genin.christophe.secure.fileupload.Main'
