--- a/build.gradle
+++ b/build.gradle
@@ -47,12 +47,13 @@ dependencies {
 
     compile 'com.github.ben-manes.caffeine:caffeine:2.8.5'
 
-    compile group: 'com.aspose', name: 'aspose-words', version: '20.8', 'classifier':'jdk17'
+    compile group: 'com.aspose', name: 'aspose-words', version: '20.6', 'classifier':'jdk17'
     compile group: 'com.aspose', name: 'aspose-slides', version: '20.7', 'classifier':'jdk16'
     compile group: 'com.aspose', name: 'aspose-cells', version: '20.8'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'com.openpojo', name: 'openpojo', version: '0.8.13'
     testCompile("org.assertj:assertj-core:3.11.1")
     testCompile('org.mockito:mockito-core:3.5.2')
 }
