--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - TEST_EXTENSIONS=["JPG", "PDF"]
       - TEST_EXPIRE=300
       - UPLOAD_DIRECTORY=/upload
-      - CORS_ORIGIN=localhost
+      - CORS_ORIGIN=.*
 
     ports:
       - "8000:8000"
